added endpoint for creating album, restructured creating and uploads into two separate html pages

--- a/sls-albums/client/src/album-upload.html
+++ b/sls-albums/client/src/album-upload.html
@@ -14,11 +14,20 @@
     <h1><a href="/">Serverless Albums</a></h1>
     <hr>
 
-    <h2>Create Album</h2>
+    <div class="alert alert-success">
+      Album created: <span id="album-name" style="font-weight: bold">
+    </div>
 
-    <form>
-      <input id='img-input' type="file" multiple></input>
-    </form>
+    <h2>2. Upload Photos!</h2>
+    <hr>
+
+    <div class="well">
+      <form>
+        <div class="form-group">
+          <input id='img-input' type="file" multiple></input>
+        </div>
+      </form>
+    </div>
 
   </div>
   <link rel="import" href="/partials/scripts.html">
