--- a/sls-albums/client/src/index.html
+++ b/sls-albums/client/src/index.html
@@ -14,7 +14,7 @@
     <h1><a href="/">Serverless Albums</a></h1>
     <hr>
 
-    <a href="/create-album.html">Create Album</a>
+    <a href="/album-create.html">Create Album</a>
 
   </div>
   <link rel="import" href="/partials/scripts.html">
