uploading from album-upload.html page works

--- a/sls-albums/client/src/album-upload.html
+++ b/sls-albums/client/src/album-upload.html
@@ -22,11 +22,15 @@
     <hr>
 
     <div class="well">
-      <form>
+      <form id="form-album-upload">
         <div class="form-group">
-          <input id='img-input' type="file" multiple></input>
+          <input type="file" name="img-input" multiple
+            accept=".gif,.jpg,.jpeg,.png"></input>
         </div>
       </form>
+      <div id="album-display">
+
+      </div>
     </div>
 
   </div>
