showing thumbnails after upload works

--- a/sls-albums/client/src/album-upload.html
+++ b/sls-albums/client/src/album-upload.html
@@ -28,7 +28,7 @@
             accept=".gif,.jpg,.jpeg,.png"></input>
         </div>
       </form>
-      <div id="album-display">
+      <div id="thumbnails">
 
       </div>
     </div>
