added link to album on album upload page

--- a/sls-albums/client/src/album-upload.html
+++ b/sls-albums/client/src/album-upload.html
@@ -28,6 +28,9 @@
             accept=".gif,.jpg,.jpeg,.png"></input>
         </div>
       </form>
+      <div>
+        <p><a href="" id='album-link'>View Album Here</a></p>
+      </div>
       <div id="thumbnails">
 
       </div>
