added handlebars templating and naming changes

--- a/sls-albums/client/src/index.html
+++ b/sls-albums/client/src/index.html
@@ -3,21 +3,26 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Serverless Albums | Codestock Demo</title>
-  <link rel="import" href="/partials/styles.html">
+  <title>Lambda Albums | Codestock Demo</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.6/cosmo/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
 </head>
 
 <body>
 
   <div class="container">
 
-    <h1><a href="/">Serverless Albums</a></h1>
+    <h1><a href="/">Lambda Albums</a></h1>
     <hr>
 
     <a href="/album-create.html">Create Album</a>
 
   </div>
-  <link rel="import" href="/partials/scripts.html">
+  <script type="text/javascript" src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.11.1/axios.min.js"></script>
+  <script type="text/javascript" src="/scripts/defaults.js"></script>
+  <script type="text/javascript" src="/scripts/album-create.js"></script>
+  <script type="text/javascript" src="/scripts/album-upload.js"></script>
 </body>
 
 </html>
