switching site URL again; added a footer to the html pages

--- a/sls-albums/client/src/album-upload.html
+++ b/sls-albums/client/src/album-upload.html
@@ -36,6 +36,12 @@
       </div>
     </div>
 
+    <footer>
+        <hr>
+        <a href="http://codestock.org" target="_blank">CodeStock 2016 Demo</a> by
+        <a href="http://alex.klibisz.com" target="_blank">Alex Klibisz</a>
+    </footer>
+
   </div>
   <script type="text/javascript" src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.min.js"></script>
