--- a/sls-albums/client/src/index.html
+++ b/sls-albums/client/src/index.html
@@ -14,7 +14,13 @@
     <h1><a href="/">Lambda Albums</a></h1>
     <hr>
 
-    <a href="/album-create.html">Create Album</a>
+    <a class="btn btn-large btn-primary" href="/album-create.html">Create Album</a>
+
+    <footer>
+        <hr>
+        <a href="http://codestock.org" target="_blank">CodeStock 2016 Demo</a> by
+        <a href="http://alex.klibisz.com" target="_blank">Alex Klibisz</a>
+    </footer>
 
   </div>
   <script type="text/javascript" src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
