--- a/sls-albums/client/src/album-create.html
+++ b/sls-albums/client/src/album-create.html
@@ -26,9 +26,11 @@
       </form>
     </div>
 
-    <div>
-
-    </div>
+    <footer>
+        <hr>
+        <a href="http://codestock.org" target="_blank">CodeStock 2016 Demo</a> by
+        <a href="http://alex.klibisz.com" target="_blank">Alex Klibisz</a>
+    </footer>
 
   </div>
   <script type="text/javascript" src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
